fix for date fields to remove spinners and use numeric keypad on mobile

--- a/assets/scss/app/overrides/_form.scss
+++ b/assets/scss/app/overrides/_form.scss
@@ -82,16 +82,28 @@ input[type='tel'].code {
 .-date .month {
   width: 3em;
   &[type=number] {
+    -webkit-appearance: none;
     font-size:1.6em;
-    width: 3em;
+    width: 2.2em;
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0
+    }
   }
 }
 
 .-date .year {
   width: 4em;
   &[type=number] {
+    -webkit-appearance: none;
     font-size:1.6em;
-    width: 4.2em;
+    width: 4em;
+    &::-webkit-inner-spin-button,
+    &::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0
+    }
   }
 }
 
